--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,18 @@ services:
       - "8001:8001"
     environment:
       - PORT=8001
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
     restart: unless-stopped
     container_name: maya-astrology-api
     networks:
       - maya-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/docs"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 networks:
   maya-network:
     driver: bridge
-      start_period: 40s
